tests/NormalTests/paczka2/big_fuzzy/46534402.err
Error in line 4: ioKv S160 97,9
Error in line 18: A244 S160 6,1
Error in line 22: ImCSoLhUM A244 0,3
Error in line 39: 2QLOcGFIXDD S160 28,8
Error in line 41: ioKv A631 43,1
Error in line 53: ImCSoLhUM A244 35,93
Error in line 51: gUxc A244 54,8
Error in line 56: ImCSoLhUM A631 52,0
Error in line 58: ioKv A265 45,2
Error in line 72: jAONHeZ A265 0,1
Error in line 83: Q1N A244 29,3
Error in line 88: 2QLOcGFIXDD A265 43,7
Error in line 84: ImCSoLhUM S160 34,2
Error in line 89: 2QLOcGFIXDD S160 710,5
Error in line 81: jAONHeZ S160 2,4
Error in line 87: gUxc A244 7,4
Error in line 92: 2QLOcGFIXDD A244 99,7
Error in line 96: gUxc A265 73,9
Error in line 99: gUxc A244 53,7
Error in line 107: A244 A244 2,9
Error in line 111: ImCSoLhUM A244 98,0
Error in line 101: Q1N A265 3,7
Error in line 120: ImCSoLhUM A265 93,1
Error in line 115: Q1N S160 104,4
Error in line 127: Q1N A265 24,4
Error in line 118: jAONHeZ A265 65,2
Error in line 109: A244 A631 95,5
Error in line 143: jAONHeZ S160 87,2
Error in line 146: ImCSoLhUM A244 73,4
Error in line 170: gUxc S160 82,3
Error in line 187: jAONHeZ S160 24,9
Error in line 193: Q1N A244 14,7
Error in line 200: ImCSoLhUM A265 91,8
Error in line 203: jAONHeZ A265 74,3
Error in line 226: A244 A631 92,2
Error in line 245: gUxc A631 22,8
Error in line 248: gUxc S160 48,6
